--- a/css/styles.css
+++ b/css/styles.css
@@ -13,3 +13,10 @@ p{
     border: 3px solid white;
     border-radius: 20px;
 }
+
+#container{
+    width: 60%;
+    margin: 0px auto;
+    border: 2px solid black;
+    background-color: #696969;
+}
