--- a/css/styles.css
+++ b/css/styles.css
@@ -1,22 +1,72 @@
-body{
-    text-align: center;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+html{
+    font-size: 62.5%;
+}
+body{    
     font-family: Arial, Helvetica, sans-serif;
-    background-color: blue;
+    font-size: 1.6rem;
+    background-color: #696969;
 }
 
 p{
-    color: white;
+    color: #696969;
 }
 
 #cabecera{
     background-color: #c3c3c3;
     border: 3px solid white;
     border-radius: 20px;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-evenly;  
+    flex-basis: auto;
 }
 
+#cabecera .logo{
+    display: flex;
+    align-items: center;
+    margin: auto;
+    border: .2rem solid white;
+    border-radius: 1rem;     
+}
+
+#cabecera .titulo{
+    display: flex;
+    font-size: 2.3rem;
+    color: white;
+    font-weight: bold;
+    align-items: center;
+}
+
+.navigation ul{
+    display: flex;
+    flex-flow: row nowrap;    
+    list-style: none;
+    margin: 0;
+}
+
+.navigation a {
+    cursor: pointer;
+    text-decoration: none;
+    display: block;
+    padding: 1em;
+    color: white;
+ }
+
+ .navigation a:hover {
+    background: #1565C0;
+}
+
+
 #container{
+    text-align: center;
+    border-radius: 20px;
     width: 60%;
     margin: 0px auto;
     border: 2px solid black;
-    background-color: #696969;
+    background-color: #eceaea;
 }
