--- a/css/styles.css
+++ b/css/styles.css
@@ -20,3 +20,10 @@ p{
     border: 2px solid black;
     background-color: #696969;
 }
+
+footer{
+    color: white;
+    background-color: #222222;
+    text-align: center;
+    font-size: 1.6rem;
+}
