--- a/css/styles.css
+++ b/css/styles.css
@@ -69,7 +69,7 @@ p{
     margin: 0px auto;
     border: 2px solid black;
 
-    background-color: #222222;
+    background-color: white;
 }
 
 footer{
